--- a/requirements.txt
+++ b/requirements.txt
@@ -17,8 +17,8 @@ botocore==1.34.77
 build==1.2.1
 cachetools==5.3.3
 catalogue==2.0.10
-certifi==2024.2.2
-charset-normalizer==3.3.2
+certifi==2024.8.30
+charset-normalizer==3.4.0
 chroma-hnswlib==0.7.3
 chromadb==0.4.24
 click==8.1.7
@@ -26,24 +26,24 @@ cloudpathlib==0.16.0
 coloredlogs==15.0.1
 comm==0.2.2
 confection==0.1.4
-contourpy==1.2.1
+contourpy==1.3.1
 cycler==0.12.1
 cymem==2.0.8
 dataclasses-json==0.6.4
 debugpy==1.6.7
 decorator==5.1.1
 Deprecated==1.2.14
-en-core-web-sm==3.7.1
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
 et-xmlfile==1.1.0
 exceptiongroup==1.2.0
 executing==2.0.1
 faiss-cpu==1.8.0
 fastapi==0.110.1
-filelock==3.13.3
+filelock==3.16.1
 flatbuffers==24.3.25
-fonttools==4.50.0
+fonttools==4.55.1
 frozenlist==1.4.1
-fsspec==2024.3.1
+fsspec==2024.10.0
 gensim==4.3.2
 gitdb==4.0.11
 GitPython==3.1.43
@@ -52,18 +52,18 @@ googleapis-common-protos==1.63.0
 grpcio==1.62.1
 h11==0.14.0
 httptools==0.6.1
-huggingface-hub==0.22.2
+huggingface-hub>=0.16.4,<0.18
 humanfriendly==10.0
-idna==3.6
+idna==3.10
 imbalanced-learn==0.12.2
 importlib-metadata==7.0.0
 importlib_resources==6.4.0
 ipykernel==6.29.3
 ipython==8.22.2
 jedi==0.19.1
-Jinja2==3.1.3
+Jinja2==3.1.4
 jmespath==1.0.1
-joblib==1.3.2
+joblib==1.4.2
 jsonlines==4.0.0
 jsonpatch==1.33
 jsonpointer==2.4
@@ -71,7 +71,7 @@ jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
 jupyter_client==8.6.1
 jupyter_core==5.5.0
-kiwisolver==1.4.5
+kiwisolver==1.4.7
 kubernetes==29.0.0
 langchain==0.1.14
 langchain-community==0.0.31
@@ -80,9 +80,9 @@ langchain-text-splitters==0.0.1
 langcodes==3.3.0
 langsmith==0.1.39
 markdown-it-py==3.0.0
-MarkupSafe==2.1.5
+MarkupSafe==3.0.2
 marshmallow==3.21.1
-matplotlib==3.8.3
+matplotlib==3.9.3
 matplotlib-inline==0.1.6
 mdurl==0.1.2
 mmh3==4.1.0
@@ -92,8 +92,7 @@ multidict==6.0.5
 murmurhash==1.0.10
 mypy-extensions==1.0.0
 nest_asyncio==1.6.0
-networkx==3.2.1
-NewsSentiment==1.2.28
+networkx==3.4.2
 nltk==3.8.1
 numpy==1.26.4
 oauthlib==3.2.2
@@ -111,13 +110,12 @@ opentelemetry-semantic-conventions==0.45b0
 opentelemetry-util-http==0.45b0
 orjson==3.10.0
 overrides==7.7.0
-packaging==23.2
-pandas==2.2.1
+packaging>=23.2,<24.0
+pandas==2.2.3
 parso==0.8.3
 pexpect==4.9.0
 pickleshare==0.7.5
-pillow==10.3.0
-pip==23.3.1
+pillow>=8.0.0,<11.0.0
 platformdirs==4.2.0
 posthog==3.5.0
 preshed==3.0.9
@@ -134,30 +132,31 @@ pydantic==2.6.4
 pydantic_core==2.16.3
 pydeck==0.8.1b0
 Pygments==2.17.2
-pyparsing==3.1.2
+pyparsing==3.2.0
 PyPika==0.48.9
 pyproject_hooks==1.0.0
-python-dateutil==2.9.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-pytz==2024.1
-PyYAML==6.0.1
+pytz==2024.2
+PyYAML==6.0.2
 pyzmq==25.1.2
 referencing==0.34.0
-regex==2023.12.25
-requests==2.31.0
+regex==2024.11.6
+requests==2.32.3
 requests-oauthlib==2.0.0
 rich==13.7.1
 rpds-py==0.18.0
 rsa==4.9
 s3transfer==0.10.1
 sacremoses==0.1.1
-scikit-learn==1.4.1.post1
-scipy==1.13.0
+safetensors==0.4.5
+scikit-learn==1.5.2
+scipy==1.14.1
 seaborn==0.13.2
 sentence-transformers==2.2.2
 sentencepiece==0.2.0
-setuptools==68.2.2
-six==1.16.0
+setuptools>=68.2.2
+six==1.17.0
 smart-open==6.4.0
 smmap==5.0.1
 sniffio==1.3.1
@@ -169,26 +168,26 @@ srsly==2.4.8
 stack-data==0.6.2
 starlette==0.37.2
 streamlit==1.33.0
-sympy==1.12
+sympy==1.13.3
 tabulate==0.9.0
 tenacity==8.2.3
 thinc==8.2.3
-threadpoolctl==3.4.0
+threadpoolctl==3.5.0
 tokenizers==0.13.3
 toml==0.10.2
 tomli==2.0.1
 toolz==0.12.1
-torch==2.2.2
-torchvision==0.17.2
+torch>=1.12,<2.1
+torchvision>=0.13.0,<0.17.0
 tornado==6.3.3
 tqdm==4.66.2
 traitlets==5.14.2
 transformers==4.24.0
 typer==0.9.4
-typing_extensions==4.10.0
+typing_extensions==4.12.2
 typing-inspect==0.9.0
-tzdata==2024.1
-urllib3==2.2.1
+tzdata==2024.2
+urllib3==2.2.3
 uvicorn==0.29.0
 uvloop==0.19.0
 wasabi==1.1.2
@@ -197,7 +196,7 @@ wcwidth==0.2.13
 weasel==0.3.4
 websocket-client==1.7.0
 websockets==12.0
-wheel==0.41.2
+wheel>=0.41.2
 wrapt==1.16.0
 yarl==1.9.4
 zipp==3.17.0
